3rdparty/openctm/lib/openctm.h


#define CTM_API_VERSION 0x00000100
#define CTM_TRUE 1
#define CTM_FALSE 0
typedef float CTMfloat;
typedef uint32_t CTMuint;
typedef void * CTMcontext;
typedef enum {
  CTM_NONE              = 0x0000, 
  CTM_INVALID_CONTEXT   = 0x0001, 
  CTM_INVALID_ARGUMENT  = 0x0002, 
  CTM_INVALID_OPERATION = 0x0003, 
  CTM_INVALID_MESH      = 0x0004, 
  CTM_OUT_OF_MEMORY     = 0x0005, 
  CTM_FILE_ERROR        = 0x0006, 
  CTM_BAD_FORMAT        = 0x0007, 
  CTM_LZMA_ERROR        = 0x0008, 
  CTM_INTERNAL_ERROR    = 0x0009, 
  CTM_UNSUPPORTED_FORMAT_VERSION = 0x000A, 
  CTM_IMPORT            = 0x0101, 
  CTM_EXPORT            = 0x0102, 
  CTM_METHOD_RAW        = 0x0201, 
  CTM_METHOD_MG1        = 0x0202, 
  CTM_METHOD_MG2        = 0x0203, 
  CTM_VERTEX_COUNT      = 0x0301, 
  CTM_TRIANGLE_COUNT    = 0x0302, 
  CTM_HAS_NORMALS       = 0x0303, 
  CTM_UV_MAP_COUNT      = 0x0304, 
  CTM_ATTRIB_MAP_COUNT  = 0x0305, 
  CTM_VERTEX_PRECISION  = 0x0306, 
  CTM_NORMAL_PRECISION  = 0x0307, 
  CTM_COMPRESSION_METHOD = 0x0308, 
  CTM_FILE_COMMENT      = 0x0309, 
  CTM_NAME              = 0x0501, 
  CTM_FILE_NAME         = 0x0502, 
  CTM_PRECISION         = 0x0503, 
  CTM_INDICES           = 0x0601, 
  CTM_VERTICES          = 0x0602, 
  CTM_NORMALS           = 0x0603, 
  CTM_UV_MAP_1          = 0x0700, 
  CTM_UV_MAP_2          = 0x0701, 
  CTM_UV_MAP_3          = 0x0702, 
  CTM_UV_MAP_4          = 0x0703, 
  CTM_UV_MAP_5          = 0x0704, 
  CTM_UV_MAP_6          = 0x0705, 
  CTM_UV_MAP_7          = 0x0706, 
  CTM_UV_MAP_8          = 0x0707, 
  CTM_ATTRIB_MAP_1      = 0x0800, 
  CTM_ATTRIB_MAP_2      = 0x0801, 
  CTM_ATTRIB_MAP_3      = 0x0802, 
  CTM_ATTRIB_MAP_4      = 0x0803, 
  CTM_ATTRIB_MAP_5      = 0x0804, 
  CTM_ATTRIB_MAP_6      = 0x0805, 
  CTM_ATTRIB_MAP_7      = 0x0806, 
  CTM_ATTRIB_MAP_8      = 0x0807  
} CTMenum;
typedef CTMuint (CTMCALL * CTMreadfn)(void * aBuf, CTMuint aCount, void * aUserData);
typedef CTMuint (CTMCALL * CTMwritefn)(const void * aBuf, CTMuint aCount, void * aUserData);
CTMEXPORT CTMcontext CTMCALL ctmNewContext(CTMenum aMode);
CTMEXPORT void CTMCALL ctmFreeContext(CTMcontext aContext);
CTMEXPORT CTMenum CTMCALL ctmGetError(CTMcontext aContext);
CTMEXPORT const char * CTMCALL ctmErrorString(CTMenum aError);
CTMEXPORT CTMuint CTMCALL ctmGetInteger(CTMcontext aContext, CTMenum aProperty);
CTMEXPORT CTMfloat CTMCALL ctmGetFloat(CTMcontext aContext, CTMenum aProperty);
CTMEXPORT const CTMuint * CTMCALL ctmGetIntegerArray(CTMcontext aContext,
  CTMenum aProperty);
CTMEXPORT const CTMfloat * CTMCALL ctmGetFloatArray(CTMcontext aContext,
  CTMenum aProperty);
CTMEXPORT CTMenum CTMCALL ctmGetNamedUVMap(CTMcontext aContext,
  const char * aName);
CTMEXPORT const char * CTMCALL ctmGetUVMapString(CTMcontext aContext,
  CTMenum aUVMap, CTMenum aProperty);
CTMEXPORT CTMfloat CTMCALL ctmGetUVMapFloat(CTMcontext aContext,
  CTMenum aUVMap, CTMenum aProperty);
CTMEXPORT CTMenum CTMCALL ctmGetNamedAttribMap(CTMcontext aContext,
  const char * aName);
CTMEXPORT const char * CTMCALL ctmGetAttribMapString(CTMcontext aContext,
  CTMenum aAttribMap, CTMenum aProperty);
CTMEXPORT CTMfloat CTMCALL ctmGetAttribMapFloat(CTMcontext aContext,
  CTMenum aAttribMap, CTMenum aProperty);
CTMEXPORT const char * CTMCALL ctmGetString(CTMcontext aContext,
  CTMenum aProperty);
CTMEXPORT void CTMCALL ctmCompressionMethod(CTMcontext aContext,
  CTMenum aMethod);
CTMEXPORT void CTMCALL ctmCompressionLevel(CTMcontext aContext,
  CTMuint aLevel);
CTMEXPORT void CTMCALL ctmVertexPrecision(CTMcontext aContext,
  CTMfloat aPrecision);
CTMEXPORT void CTMCALL ctmVertexPrecisionRel(CTMcontext aContext,
  CTMfloat aRelPrecision);
CTMEXPORT void CTMCALL ctmNormalPrecision(CTMcontext aContext,
  CTMfloat aPrecision);
CTMEXPORT void CTMCALL ctmUVCoordPrecision(CTMcontext aContext,
  CTMenum aUVMap, CTMfloat aPrecision);
CTMEXPORT void CTMCALL ctmAttribPrecision(CTMcontext aContext,
  CTMenum aAttribMap, CTMfloat aPrecision);
CTMEXPORT void CTMCALL ctmFileComment(CTMcontext aContext,
  const char * aFileComment);
CTMEXPORT void CTMCALL ctmDefineMesh(CTMcontext aContext,
  const CTMfloat * aVertices, CTMuint aVertexCount, const CTMuint * aIndices,
  CTMuint aTriangleCount, const CTMfloat * aNormals);
CTMEXPORT CTMenum CTMCALL ctmAddUVMap(CTMcontext aContext,
  const CTMfloat * aUVCoords, const char * aName, const char * aFileName);
CTMEXPORT CTMenum CTMCALL ctmAddAttribMap(CTMcontext aContext,
  const CTMfloat * aAttribValues, const char * aName);
CTMEXPORT void CTMCALL ctmLoad(CTMcontext aContext, const char * aFileName);
CTMEXPORT void CTMCALL ctmLoadCustom(CTMcontext aContext, CTMreadfn aReadFn,
  void * aUserData);
CTMEXPORT void CTMCALL ctmSave(CTMcontext aContext, const char * aFileName);
CTMEXPORT void CTMCALL ctmSaveCustom(CTMcontext aContext, CTMwritefn aWriteFn,
  void * aUserData);